k8s-manifests/bankapp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: bankapp-service
  namespace: bankapp
spec:
  selector:
    app: bankapp

  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30001

  type: NodePort
