k8s-manifests/bankapp-deploy.yaml
# checkov:skip=CKV_K8S_23: Non-root user already set in Dockerfile
# checkov:skip=CKV_K8S_40: UID set in Dockerfile, enforcing here crashes pod

apiVersion: apps/v1
kind: Deployment
metadata:
  name: bankapp
  namespace: bankapp

spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0

  selector:
    matchLabels:
      app: bankapp

  template:
    metadata:
      labels:
        app: bankapp
      annotations:
        seccomp.security.alpha.kubernetes.io/pod: runtime/default

    spec:
      automountServiceAccountToken: false

      containers:
        - name: bankapp
          image: rohitrawat891997/bankapp:5d6828e3badbe262fecce7bcad77a581845c3974
          imagePullPolicy: Always

          ports:
            - containerPort: 8080

          volumeMounts:
            - name: tmp-volume
              mountPath: /tmp        

          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi

      volumes:
        - name: tmp-volume
          emptyDir: {}

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: bankapp-network-policy
  namespace: bankapp

spec:
  podSelector:
    matchLabels:
      app: bankapp

  policyTypes:
    - Ingress
    - Egress

  ingress:
    - ports:
        - protocol: TCP
          port: 8080

  egress:
    - ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53

    - ports:
        - protocol: TCP
          port: 3306
